[package]
name = "Patronus-back"
version = "1.0.0"
authors = ["Netoun <coulonnier.nicolas.44@gmail.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.2"
jwt = "*"
rust-crypto = "0.2"
rustc-serialize = "0.3"
r2d2 = "0.8"
postgres = { version = "0.15.2", features = ["with-uuid", "with-chrono"] }
r2d2_postgres="0.14"
uuid = {version ="0.5",features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }
